# MicroLiq

./: .gitattributes  .gitignore  .markdownlint.json  CLAUDE.md  MicroLiq.docx  README.md  index.html  main.py  package-lock.json  pyproject.toml  ~$croLiq.docx
.claude/todos/: 2026-02-18_ch4_remaining_issues.md
.obsidian/: workspace.json
career/: career-planning.md
css/: style.css
experiment/: density.csv  experiment.html  k0_effect.py  properties.xlsx
experiment/test240829/: F015.csv  F016.csv  draw_p_tau.py  draw_time_gamma.py  draw_time_u.py
experiment/test240902/: F023.csv  draw_gamma_tau.py  draw_p_tau.py  draw_time_gamma.py  shear.csv
experiment/test240909/: draw_p_tau.py  shear.csv
experiment/test240910/: shear.csv
experiment/test240911/: draw_p_tau.py  shear.csv
experiment/test240912/: shear.csv
experiment/test240913/: shear.csv
experiment/test241008/: draw_p_tau.py  shear.csv
js/: navigation.js  theme.js  tooltip.js
multidirection/: multidirection.html
papers/: README.md
quadTree/: collapsible.js  particle.js  sketch.js  style.css
thesis/: 00_front_matter.md  01_introduction.md  02_literature_review.md  03_fabric_evolution.md  04_1_anisotropic_consolidation_sim.md  04_2_anisotropic_consolidation_exp.md  04_anisotropic_consolidation.md  05_multidirectional_shear.md  06_conclusions.md  07_references.md  08_appendix1_hpc.md  09_appendix2_raytracing.md  10_appendix3_toyouraNagisa.md  MicroLiq_full.md  index.md
torsionSim/: contactPolarDist.py  contactPolarDist_fast.py  fabric_getter.py  torsionSim.html
triaxial/: triaxial.html
(+363 files in other folders)
